# mtg-labels

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  config.py  fly.toml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-build.yml  backend-ci.yml  backend-deploy.yml  build.yml  ci.yml  deploy.yml  frontend-ci.yml  frontend-deploy.yml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  main.py
backend/src/: config.py
backend/src/api/: dependencies.py  routes.py
backend/src/services/: pdf_generator.py  scryfall_client.py
backend/tests/integration/: test_api_endpoints.py  test_cache_performance.py  test_package_management.py  test_pdf_generation.py  test_performance.py
backend/tests/unit/: test_cache_manager.py  test_helpers.py  test_memory_leaks.py  test_set_data.py
frontend/: .env.example  .eslintrc.js  .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/constants/: templates.ts
frontend/src/hooks/: useCardTypes.ts  useSelection.ts  useSets.ts  useTheme.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts  grouping.ts  localStorage.ts
frontend/templates/: index.html
specs/001-optimize-project/: ANALYSIS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-optimize-project/checklists/: cicd.md  performance.md  requirements.md  ux.md
specs/001-optimize-project/contracts/: api-contracts.md
specs/002-custom-label-templates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-custom-label-templates/checklists/: ux.md
specs/002-custom-label-templates/contracts/: api-contracts.md
specs/003-react-frontend-vercel/: ANALYSIS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py
src/api/: routes.py
src/cache/: __init__.py  cache_manager.py
src/models/: __init__.py  set_data.py
src/mtg_label_generator/: __init__.py
src/services/: __init__.py  helpers.py  pdf_generator.py  scryfall_client.py
templates/: index.html
tests/: conftest.py
tests/contract/: test_scryfall_api.py
tests/integration/: test_api_endpoints.py  test_deployment.py  test_pdf_generation.py
tests/unit/: test_cache_manager.py  test_dependencies.py  test_error_handling.py  test_helpers.py  test_mtg_label_generator_init.py  test_pdf_generator.py  test_pdf_quality.py  test_scryfall_client.py
(+28 files in other folders)
