[tool.poetry]
name = "mtg-label-generator"
version = "0.1.0"
description = "A Magic: The Gathering Printable Label Generator using FastAPI, ReportLab, and Bootstrap 5."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
requests = "^2.28.2"
reportlab = "^3.6.12"
jinja2 = "^3.1.2"
python-multipart = "^0.0.20"
cairosvg = "^2.7.1"
svglib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
